# dang-dong

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  schema.yml
api/: admin.py  codes.py  errors.py  models.py  permissions.py  responses.py  serializers.py  urls.py  utils.py  views.py
config/: settings.py  urls.py
customauth/: models.py  serializers.py  urls.py  utils.py  views.py
locale/de/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fa/LC_MESSAGES/: django.po
templates/: email.html  email.txt
