[tool.poetry]
name = "dang-dong"
version = "0.1.0"
description = ""
authors = ["F4R4N <farantgh@gmail.com>"]
maintainers = ["F4R4N <farantgh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/F4R4N/dang-dong"
documentation = "https://python-poetry.org/docs/" # change

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.4.0"
django = "^4.2.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
mypy = "^1.5.1"
python-dotenv = "^1.0.0"
djangorestframework-stubs = "^3.14.2"
django-stubs = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
